--- a/HuaShanApp/app/src/main/res/layout/fragment_my.xml
+++ b/HuaShanApp/app/src/main/res/layout/fragment_my.xml
@@ -4,11 +4,11 @@
     <data>
         <variable
             name="entity"
-            type="com.karazam.huashanapp.my.model.databinding.MyEntity"
+            type="com.karazam.huashanapp.my.main.model.databinding.MyEntity"
             ></variable>
         <variable
             name="handler"
-            type="com.karazam.huashanapp.my.viewmodel.MyViewModel"
+            type="com.karazam.huashanapp.my.main.viewmodel.MyViewModel"
             ></variable>
     </data>
     <android.support.percent.PercentRelativeLayout
@@ -78,9 +78,9 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                app:layout_heightPercent="25%"
+                app:layout_heightPercent="22%"
                 app:layout_marginTopPercent="2%"
-                android:background="#cff"
+                android:background="#fff"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -97,7 +97,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:background="#eea">
+                    >
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -170,7 +170,7 @@
             <android.support.percent.PercentFrameLayout
                 android:layout_width="match_parent"
                 app:layout_heightPercent="8%"
-                app:layout_marginTopPercent="27%"
+                app:layout_marginTopPercent="24%"
                 android:paddingLeft="10dp"
                 android:paddingRight="10dp"
                 android:background="#ff8000">
@@ -212,15 +212,20 @@
 
             <android.support.percent.PercentFrameLayout
                 android:layout_width="match_parent"
-                app:layout_heightPercent="60%"
-                app:layout_marginTopPercent="35%"
-                android:padding="5dp"
-                android:background="#faff">
+                app:layout_heightPercent="65%"
+                app:layout_marginTopPercent="32%"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:paddingTop="2dp"
+                android:paddingBottom="2dp"
+                android:background="#fff">
 
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/rl_my_information"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:overScrollMode="never"
+                    android:scrollbars="none">
 
 
                 </android.support.v7.widget.RecyclerView>
