--- a/HuaShanApp/app/src/main/res/layout/layout_my_information_item.xml
+++ b/HuaShanApp/app/src/main/res/layout/layout_my_information_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.percent.PercentRelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="80dp"
     android:layout_height="100dp"
     android:background="#fff">
@@ -10,15 +11,17 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:background="#0894EC"
-        android:layout_centerInParent="true"/>
+        app:layout_marginTopPercent="30%"
+        android:layout_centerHorizontal="true"/>
 
     <TextView
         android:id="@+id/name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/icon_img"
-        android:layout_marginTop="5dp"
+        app:layout_marginTopPercent="5%"
         android:gravity="center"
-        android:text="name_text"/>
+        android:text="name_text"
+        android:textSize="12dp"/>
 
-</RelativeLayout>
+</android.support.percent.PercentRelativeLayout>
